Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38099

Transition property 'running' gets stuck on true

XMLWordPrintable

    • Android, macOS, Windows
    • b8e4975c7a274f7bd1dd1fa20016c34c62045a04

      A signal adds an item to a ListView every 1000 msec. There is a Transition that runs animations either every 500 msec or every 10000 msec and I monitor the Transition property 'running'.

      With the duration of 500 'running' toggles as expected, but with 10000 it gets set to true and remains so, even when I stop adding items.

      This is a snippet to illustrate the salient part:

      add: Transition {
      onRunningChanged:

      { console.log("running changed: ", running) }

      NumberAnimation

      { properties: "x"; from: trans.localVrnOrigin.x; duration: list.animationDuration }

      NumberAnimation

      { properties: "y"; from: trans.localVrnOrigin.y; duration: list.animationDuration }

      }
      addDisplaced: Transition {
      NumberAnimation

      { properties: "x,y"; duration: list.animationDuration }

      }

        1. main.qml
          2 kB
        2. fixed.qml
          2 kB
        For Gerrit Dashboard: QTBUG-38099
        # Subject Branch Project Status CR V

            erikv Erik Verbruggen
            martynw Martyn Woerner
            Votes:
            2 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes