src/quick/util/qquicktransition.cpp
@@ -211,6 +211,7 @@ QQuickTransitionInstance::QQuickTransitionInstance(QQuickTransition *transition,
 
 QQuickTransitionInstance::~QQuickTransitionInstance()
 {
+    stop();
     removeStateChangeListener();
     delete m_anim;
 }
